# MOBODY

./: pyproject.toml
scripts/: run_mujoco_friction_gravity.sbatch
