[project]
name = "mobody"
version = "0.1.0"
description = "MOBODY: Model-Based Off-Dynamics Offline Reinforcement Learning"
readme = "README.md"
requires-python = "==3.8.13"
dependencies = [
    "Cython==0.29.23",
    "debugpy==1.6.3",
    "dm-control==1.0.8",
    "dm-env==1.5",
    "dm-tree==0.1.7",
    "glfw==2.5.4",
    "gym==0.23.1",
    "imageio==2.9.0",
    "matplotlib==3.6.2",
    "moviepy==1.0.3",
    "mujoco-py==2.1.2.14",
    "numpy==1.23.5",
    "omegaconf==2.1.2",
    "opencv-python==4.5.1.48",
    "pandas==1.4.4",
    "pybullet==3.2.5",
    "pycparser==2.21",
    "pygame==2.1.2",
    "pyglet==1.5.15",
    "PyOpenGL==3.1.6",
    "requests==2.28.1",
    "scipy==1.4.1",
    "seaborn==0.12.2",
    "tqdm==4.64.0",
    "urllib3==1.26.12",
    "wandb==0.13.2",
    "tensorboard",
    "tensorboardX",
    "d4rl",
    "gym-maze",
    "rl-utils",
]

[tool.uv.sources]
d4rl = { git = "https://github.com/Farama-Foundation/D4RL.git", rev = "4235ef21ac5ba35285ecfce133d9eff62f3490e5" }
gym-maze = { git = "https://github.com/MattChanTK/gym-maze.git", rev = "83176811b49b5538a6213520612f44fb1bc49114" }
rl-utils = { git = "https://github.com/TianhongDai/reinforcement-learning-algorithms.git", rev = "88ff69c082cba9305275a0082794d4b467ac823f" }

[tool.uv]
# Old packages (gym 0.18.3, mujoco-py 2.1.x, D4RL) need pre-PEP517 setuptools
# to build. Mirrors the conda recipe's `pip install setuptools==63.2.0 wheel==0.38.4`
# step before installing requirement.txt.
build-constraint-dependencies = [
    "setuptools==63.2.0",
    "wheel==0.38.4",
]

